# hyper-public

./: .gitignore  CMakeLists.txt  README.md
Editors/: CMakeLists.txt
Editors/Source/: main.cpp
Editors/Source/Lodepng/: lodepng.cpp
Editors/Source/TinyGLTF/: tiny_gltf.hpp
Game/: CMakeLists.txt  shaders.cfg
Game/Shaders/: Common.hlsli  FXAA.hlsl  GBuffer.Solid.hlsl  ImGui.hlsl  LightPass.Cel.hlsl  LightPass.hlsl  RasterTesting.hlsl  RayTracing.AO.hlsl  RayTracing.Gen.hlsl  RayTracing.Shadow.hlsl  Render2D.Quad.hlsl  Render2D.QuadFont.hlsl  Render2D.QuadRounded.hlsl  Render2D.QuadTexture.hlsl  Sky.hlsl
Game/Source/Asset/: Asset.cpp  Asset.hpp  AssetRegistry.cpp  AssetRegistry.hpp
Game/Source/Core/: Common.hpp  Event.hpp  GUID.cpp  GUID.hpp  Log.cpp  Log.hpp  Macros.hpp
Game/Source/Core/Math/: Color.hpp  Float2.hpp  Float3.hpp  Float4.hpp  Math.cpp  Math.hpp  Matrix3.hpp  Matrix4.hpp  Quaternion.hpp  Rectangle.hpp  Transform.cpp  Transform.hpp
Game/Source/Core/Serialization/: Stream.cpp  Stream.hpp
Game/Source/Core/String/: String.hpp  StringUtil.hpp  Strings.cpp  WideString.hpp
Game/Source/Engine/: Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  GameEngine.cpp  GameEngine.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Game/Source/Game/: ActionSystem.cpp  ActionSystem.hpp  Game.cpp  Game.hpp  GameRenderer.cpp  GameRenderer.hpp  GameWindow.cpp  GameWindow.hpp  IMap.hpp  LocalPlayer.cpp  LocalPlayer.hpp  UserInterface.cpp  UserInterface.hpp
Game/Source/Game/Entities/: FallingEntity.cpp  FallingEntity.hpp  HouseDoorEntity.cpp  HouseDoorEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  StaticModelEntity.cpp  StaticModelEntity.hpp
Game/Source/Game/Maps/: GymMap.cpp  GymMap.hpp
Game/Source/Game/Weapon/: BulletEntity.cpp  BulletEntity.hpp  WeaponSystem.cpp  WeaponSystem.hpp
Game/Source/Physics/: BodyDataStorage.hpp  JoltMath.hpp  PhysicsScene.cpp  PhysicsScene.hpp
Game/Source/Renderer/: Camera.cpp  Camera.hpp  DescriptorTableManager.cpp  DescriptorTableManager.hpp  DescriptorsCache.cpp  DescriptorsCache.hpp  Device.hpp  DrawContext.hpp  Font.cpp  Font.hpp  FramebufferCache.cpp  FramebufferCache.hpp  GPUTask.cpp  GPUTask.hpp  ImGui.cpp  ImGui.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  PSOCache.cpp  PSOCache.hpp  Render2D.cpp  Render2D.hpp  SceneRenderer.cpp  SceneRenderer.hpp  ScriptablePipeline.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Skybox.cpp  Skybox.hpp
Game/Source/Renderer/Assets/: ModelAsset.cpp  ModelAsset.hpp  TextureAsset.cpp  TextureAsset.hpp
Game/Source/Renderer/Async/: TextureDownloadTask.hpp  TextureUploadTask.hpp
Game/Source/Renderer/Devices/: D3D12DeviceImpl.cpp  D3D12DeviceImpl.hpp
Game/Source/Renderer/Pipelines/: HybridStyledPipeline.cpp  HybridStyledPipeline.hpp  RasterPipeline.cpp  RasterPipeline.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp
Game/Source/Scene/: Entity.cpp  Entity.hpp  EntityPool.hpp  Scene.cpp  Scene.hpp
Game/Source/Threading/: JobManager.cpp  JobManager.hpp  Task.cpp  Task.hpp  TaskExecutor.cpp  TaskExecutor.hpp  TaskExecutorGroup.hpp  TaskGraph.cpp  TaskGraph.hpp
Resources/HDR/: BRDF.hpr  Irradiance.hpr
Resources/Icons/: MasterWindowIcon.hpr
Resources/Maps/: Gym.gltf  Gym.hpr  House.gltf
Resources/Models/: Cube.gltf  Cube.hpr  Cylinder.gltf  Cylinder.hpr  Sphere.gltf  Sphere.hpr  Stairs.gltf  Stairs.hpr
Resources/Models/Doors/House/: Door.gltf  Door.hpr  Frame.gltf  Frame.hpr
Resources/Models/Props/: Mailbox.gltf  Mailbox.hpr
Resources/Skybox/: 0.hdr  1.hdr  2.hdr  3.hdr  4.hdr  5.hdr
Resources/Skybox/irradiance/: 0.hdr  0.hpr  1.hdr  1.hpr  2.hdr  2.hpr  3.hdr  3.hpr  4.hdr  4.hpr  5.hdr  5.hpr
Runtime/: CMakeLists.txt  main.cpp  oldmain.txt
Server/: CMakeLists.txt
